@@ -264,6 +264,7 @@ var propPaths = {
     "jsonp": "jsonp",
     "lint": "lint",
     "methodOverride": "methodoverride",
+    "rewrite": "rewrite",
     "sessionCookie": "session/cookie",
     "static": "static",
     // Other
